--- a/src/style/App.css
+++ b/src/style/App.css
@@ -350,6 +350,7 @@ span.sl-notification {
     height: 1080px;
     flex-shrink: 0;
     background: var(--Black, #000);
+    margin-left: 10px;
 }
 
 .search-box{
