Refactore : Ajustement de la taille de icone certificate

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -6,6 +6,7 @@ body{
     color: white;
     margin: 0 auto;
     max-width: 1800px;
+    /* position : fixed; */
 }
 
 #root{
@@ -108,6 +109,8 @@ body{
     background-color: #1D9BF0;
     color: white;
     font-size: 1rem;
+    cursor: pointer;
+    pointer-events: auto;
 }
 .tweet{
     display: flex;
@@ -504,12 +507,17 @@ span.sl-notification {
     border: 1px solid #000;
     /* width: 30px;
     height: 30px; */
+    /* display: inline;
+    align-items: flex-start;
+    flex-direction: column; */
 }
 
 #btn{
     cursor: pointer;
     pointer-events: auto;
 }
+
+
 .follow-tex{
     display: flex;
     flex-direction: column;
@@ -517,13 +525,19 @@ span.sl-notification {
 
 .follow-body{
     display: flex;
-    width: 250px;
+    width: 50px;
     height: 50px;
     /* padding: 12px 16px; */
     justify-content: left;
     align-items: flex-start;
-    gap: 10px;
-    /* flex-shrink: 0; */
+    gap: 5px;
+    flex-shrink: 0; 
+}
+
+.i-certificate{
+    color: rgba(29,155,240,1.00);
+    cursor: pointer;
+    max-height: 20px;
 }
 
 .follow-text{
@@ -536,7 +550,7 @@ span.sl-notification {
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: normal; 
+    /* line-height: normal;  */
 }
 
 .twitter-footer{
