--- a/src/style/App.css
+++ b/src/style/App.css
@@ -210,6 +210,19 @@ main {
   align-items: center;
   justify-content: center;
   gap: 20px;
+  background-color: rgba(0,0,0,0.00);
+    border: 0 solid black;
+    box-sizing: border-box;
+    color: inherit;
+    display: inline;
+    font: inherit;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+    text-align: inherit;
+    text-decoration: none;
+    white-space: inherit;
+    word-wrap: break-word;
 }
 
 .tweet-actions{
