--- a/src/style/App.css
+++ b/src/style/App.css
@@ -218,7 +218,7 @@ main {
     font: inherit;
     list-style: none;
     margin: 0px;
-    padding: 0px;
+    /* padding: 0px; */
     text-align: inherit;
     text-decoration: none;
     white-space: inherit;
